<resources>
    <string name="app_name">Tim3r</string>
    <string name="json_cities">
        [{\"slug\":\"ekb\",\"name\":\"Екатеринбург\"},{\"slug\":\"kev\",\"name\":\"Киев\"},{\"slug\":\"krasnoyarsk\",\"name\":\"Красноярск\"},{\"slug\":\"krd\",\"name\":\"Краснодар\"},{\"slug\":\"kzn\",\"name\":\"Казань\"},{\"slug\":\"msk\",\"name\":\"Москва\"},{\"slug\":\"nnv\",\"name\":\"Нижний Новгород\"},{\"slug\":\"nsk\",\"name\":\"Новосибирск\"},{\"slug\":\"smr\",\"name\":\"Самара\"},{\"slug\":\"sochi\",\"name\":\"Сочи\"},{\"slug\":\"spb\",\"name\":\"Санкт-Петербург\"},{\"slug\":\"ufa\",\"name\":\"Уфа\"},{\"slug\":\"vbg\",\"name\":\"Выборг\"}]
    </string>
    <string name="json_event_types">
    [{\"id\":29,\"slug\":\"ball\",\"name\":\"Балы (Развлечения)\"},{\"id\":45,\"slug\":\"business-events\",\"name\":\"События для бизнеса\"},{\"id\":9,\"slug\":\"cinema\",\"name\":\"Кино (Развлечения)\"},{\"id\":37,\"slug\":\"circus\",\"name\":\"Цирковые представления (Развлечения)\"},{\"id\":34,\"slug\":\"comedy-club\",\"name\":\"Comedy club / Камеди клаб (Развлечения)\"},{\"id\":1,\"slug\":\"concert\",\"name\":\"Концерты\"},{\"id\":22,\"slug\":\"dance-trainings\",\"name\":\"Занятия танцами (Раздел Отдых)\"},{\"id\":24,\"slug\":\"discount\",\"name\":\"Скидки\"},{\"id\":3,\"slug\":\"education\",\"name\":\"Знания\"},{\"id\":23,\"slug\":\"evening\",\"name\":\"Творческие вечера\"},{\"id\":6,\"slug\":\"exhibition\",\"name\":\"Выставки\"},{\"id\":10,\"slug\":\"fashion\",\"name\":\"Мода\"},{\"id\":8,\"slug\":\"festival\",\"name\":\"Фестивали (Фестивали)\"},{\"id\":19,\"slug\":\"flashmob\",\"name\":\"Флешмобы (Развлечения)\"},{\"id\":15,\"slug\":\"games\",\"name\":\"Игры (Развлечения)\"},{\"id\":42,\"slug\":\"global\",\"name\":\"В мире\"},{\"id\":12,\"slug\":\"holiday\",\"name\":\"Праздники\"},{\"id\":36,\"slug\":\"kids\",\"name\":\"Детские (раздел детям)\"},{\"id\":33,\"slug\":\"kvn\",\"name\":\"КВН (Развлечения)\"},{\"id\":32,\"slug\":\"magic\",\"name\":\"Фокусники, иллюзионисты (Развлечения)\"},{\"id\":20,\"slug\":\"masquerade\",\"name\":\"Маскарады (Развлечения)\"},{\"id\":17,\"slug\":\"meeting\",\"name\":\"Встречи\"},{\"id\":16,\"slug\":\"night\",\"name\":\"Ночь\"},{\"id\":38,\"slug\":\"open\",\"name\":\"Дни открытых дверей\"},{\"id\":39,\"slug\":\"other\",\"name\":\"Разное\"},{\"id\":4,\"slug\":\"party\",\"name\":\"Вечеринки\"},{\"id\":44,\"slug\":\"permanent-exhibitions\",\"name\":\"Постоянные выставки\"},{\"id\":40,\"slug\":\"photo\",\"name\":\"Фотособытия\"},{\"id\":31,\"slug\":\"presentation\",\"name\":\"Презентации\"},{\"id\":28,\"slug\":\"quest\",\"name\":\"Квесты\"},{\"id\":21,\"slug\":\"romance\",\"name\":\"Романтика (Развлечения)\"},{\"id\":26,\"slug\":\"sale\",\"name\":\"Распродажа (Магазины)\"},{\"id\":27,\"slug\":\"shopping\",\"name\":\"Шопинг (Магазины)\"},{\"id\":11,\"slug\":\"show\",\"name\":\"Шоу (Развлечения)\"},{\"id\":13,\"slug\":\"social-activity\",\"name\":\"Благотворительность\"},{\"id\":18,\"slug\":\"speed-dating\",\"name\":\"Быстрые свидания (Развлечения)\"},{\"id\":5,\"slug\":\"sport\",\"name\":\"Спорт (Раздел Отдых)\"},{\"id\":35,\"slug\":\"stand-up\",\"name\":\"Стендап (Развлечения)\"},{\"id\":25,\"slug\":\"stock\",\"name\":\"Акции\"},{\"id\":2,\"slug\":\"theater\",\"name\":\"Театр (спектакли, опера, балет итд)\"},{\"id\":7,\"slug\":\"tour\",\"name\":\"Экскурсии\"},{\"id\":14,\"slug\":\"yarmarki-razvlecheniya-yarmarki\",\"name\":\"Ярмарки (Развлечения, Ярмарки)\"},{\"id\":30,\"slug\":\"yoga\",\"name\":\"Йога\"}]
    </string>
    <string name="title_home">Лента</string>
    <string name="title_calendar">Календарь</string>
    <string name="title_adding_a_task">Добавить таск</string>
    <string name="edit_task">Редактирование</string>
    <string name="add_task">Добавление</string>
    <string name="calendar">Календарь</string>

    <string name="add_task_dialog_message">Добавить в свое расписание?</string>
    <string name="add_task_dialog_yes">Добавить</string>
    <string name="add_task_dialog_no">Нет</string>

    <string name="edit_event_title">Название…</string>
    <string name="edit_event_hours_begin">10</string>
    <string name="edit_event_hours_end">11</string>
    <string name="edit_event_minutes">00</string>
    <string name="edit_event_desc">Описание…</string>

    <string name="btn_ok">OK</string>

    <string name="calendar_title">Календарь</string>

    <string name="interests_title">Вас интересует: </string>

    <string name="remove_dialog_message">Удалить из расписания?</string>
    <string name="remove_dialog_yes">Удалить</string>
    <string name="remove_dialog_no">Нет</string>
</resources>
