<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.livace.tim3r.EditEventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="parent">

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_event_title"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:nextFocusDown="@+id/edit_text_begin_hours"
            android:textSize="@dimen/text_size_title" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_text_begin_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edit_event_hours_begin"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="2"
                android:nextFocusDown="@+id/edit_text_begin_minutes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":" />

            <EditText
                android:id="@+id/edit_text_begin_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edit_event_minutes"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="2"
                android:nextFocusDown="@+id/edit_text_end_hours" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />

            <EditText
                android:id="@+id/edit_text_end_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edit_event_hours_end"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="2"
                android:nextFocusDown="@+id/edit_text_end_minutes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":" />

            <EditText
                android:id="@+id/edit_text_end_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edit_event_minutes"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="2"
                android:nextFocusDown="@+id/edit_text_end_desc" />

            <!--<EditText-->
            <!--android:id="@+id/text_view_date"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="right"-->
            <!--android:hint="9 Jan"-->
            <!--android:inputType="date" />-->
        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_event_desc"
            android:inputType="textCapSentences|textMultiLine"
            android:gravity="top|left" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btn_ok" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
